--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ langchainhub = "^0.1.18"
 wikipedia = "^1.4.0"
 tavily-python = "^0.3.3"
 chardet = "^5.2.0"
+torch = "^2.4.0"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
