--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,10 @@ wikipedia = "^1.4.0"
 tavily-python = "^0.3.3"
 chardet = "^5.2.0"
 torch = "^2.4.0"
+google-auth-oauthlib = "^1.2.1"
+google-auth-httplib2 = "^0.2.0"
+google-api-python-client = "^2.142.0"
+langchain-google-community = "^1.0.8"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
