--- a/ratemyprof/pyproject.toml
+++ b/ratemyprof/pyproject.toml
@@ -6,8 +6,22 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.10.0,<3.12"
 python-dotenv = "^1.0.1"
+langchain = "^0.2.1"
+langchain-community = "^0.2.1"
+langchain-google-genai = "^1.0.5"
+chromadb = "^0.5.0"
+tiktoken = "^0.7.0"
+sentence-transformers = "^3.0.0"
+bs4 = "^0.0.2"
+firecrawl-py = "^0.0.13"
+langchainhub = "^0.1.18"
+wikipedia = "^1.4.0"
+tavily-python = "^0.3.3"
+chardet = "^5.2.0"
+torch = "^2.4.0"
+pinecone-client = {extras = ["grpc"], version = "^5.0.1"}
 
 
 [build-system]
